--- a/LoginAuthetication/src/main/resources/application.yml
+++ b/LoginAuthetication/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME:matteo93parisi@gmail.com}
-    password: ${MAIL_PASSWORD:ethfxqglellfeuht}
+    username: ${MAIL_USERNAME:**************@gmail.com}
+    password: ${MAIL_PASSWORD:**************}
     properties:
       mail:
         smtp:
